--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "url": "https://github.com/twbs/bootstrap-sass/issues"
   },
   "devDependencies": {
-    "node-sass": "~3.2",
-    "mincer": "~1.3",
-    "ejs": "~2.3"
+    "node-sass": "^3.3.3",
+    "mincer": "^1.3.1",
+    "ejs": "^2.3.4"
   }
 }
